--- a/outils/bouliers/rekenrek/index.html
+++ b/outils/bouliers/rekenrek/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>Atelier Rekenrek - Menu Principal</title>
+    <title>Rekenrek - Menu Principal</title>
     <link rel="stylesheet" href="../../../assets/style.css"/>
     <style>
         :root {
@@ -145,7 +145,7 @@
         </nav>
         <div class="header-title">
             <h1>Atelier Rekenrek</h1>
-            <p>Concret • Pictural • Abstrait</p>
+            <p>Concret • Pictural • Abstract</p>
         </div>
     </div>
 </header>
