--- a/outils/bouliers/rekenrek/lecture_0_100_generateur2.html
+++ b/outils/bouliers/rekenrek/lecture_0_100_generateur2.html
@@ -175,6 +175,19 @@
       .cell { border: 1px solid #999; page-break-inside: avoid; }
       * { -webkit-print-color-adjust: exact; print-color-adjust: exact; }
     }
+  
+    /* --- COMPACT UI OVERRIDES (organisation seulement) --- */
+    aside{ width: 280px; }
+    .sb-header{ padding: 10px 12px; }
+    .sb-title{ font-size: 16px; }
+    .corr-toggle{ margin-top: 6px; }
+    .sb-scroll{ padding: 12px; gap: 14px; }
+    .section{ padding-bottom: 10px; }
+    .sec-title{ margin-bottom: 6px; font-size: 10px; }
+    .control{ margin-bottom: 6px; font-size: 12px; }
+    select, input[type="number"]{ padding: 6px 7px; font-size: 12px; }
+    button{ padding: 9px 10px; font-size: 12px; }
+    
   </style>
 </head>
 <body>
