--- a/outils/bouliers/rekenrek/rekenrek_sheet_generator_lecture.html
+++ b/outils/bouliers/rekenrek/rekenrek_sheet_generator_lecture.html
@@ -79,6 +79,7 @@
       { id: "barre", label: "Cache-cache barre",         sub: "cache cache barre.html",         src: "cache%20cache%20barre.html",       btn: "#f97316" },
       { id: "gen1",  label: "Lecture 0–100",             sub: "lecture_0_100_generateur.html",  src: "lecture_0_100_generateur.html",    btn: "#2563eb" },
       { id: "gen2",  label: "Lecture 0–100 (variante)",  sub: "lecture_0_100_generateur2.html", src: "lecture_0_100_generateur2.html",   btn: "#16a34a" },
+      { id: "voisins", label: "Voisins",                  sub: "voisins_generateur_compact.html", src: "voisins_generateur_compact.html", btn: "#7c3aed" },
     ];
 
     const btns = document.getElementById("btns");
