--- a/outils/bouliers/rekenrek/index.html
+++ b/outils/bouliers/rekenrek/index.html
@@ -221,6 +221,11 @@
 
     <h2 class="section-title">➖ Stratégies de Soustraction</h2>
     <section class="grid cat-sub">
+        <a href="force_5_soustraction.html" class="card-link">
+            <div class="icon-box">🖐️</div>
+            <h3>Force 5</h3>
+            <p>Soustraire à partir de 5</p>
+        </a>
         <a href="grignoteur.html" class="card-link">
             <div class="icon-box">🦖</div>
             <h3>Le Grignoteur</h3>
