--- a/outils/index.html
+++ b/outils/index.html
@@ -117,6 +117,11 @@
         <div class="title">⭕️ Disques maker</div>
         <p class="desc">Générateur de disques (fractions) </p>
       </a>
+      
+      <a class="card" href="sheet_generator_diagramme_partie_tout.html" data-color="1">
+  <div class="title">🧩 Diagrammes partie-tout</div>
+  <p class="desc">Générateur de diagrammes partie-tout avec problèmes (énoncés + schémas).</p>
+</a>
 
     </section>
     
